--- a/Project_02_Regression/Code/scraping_examples.ipynb
+++ b/Project_02_Regression/Code/scraping_examples.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
      "output_type": "stream",
      "text": [
       "I have found 30 advert, an example of them is given below: \n",
-      " http://www.emlakjet.com/ilan/derin-yapi-dan-denize-sifir-site-ici-muhtesem-tripleks-villalar-12573193/\n"
+      " http://www.emlakjet.com/ilan/yilmaz-gayrimenkulden-21-85-m-kiracili-alti-yillik-yuksek-giris-12574265/\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -127,34 +127,23 @@
      "output_type": "stream",
      "text": [
       "I have found many props, an example of them is given below:\n",
-      "İlan Numarası: 12573193\n",
+      "İlan Numarası: 12574265\n",
       "İlan Güncelleme Tarihi: 23 Ocak 2023\n",
       "Kategorisi: Satılık\n",
-      "Brüt Metrekare: 700 M2\n",
-      "Binanın Yaşı: 0 (Yeni)\n",
-      "Binanın Kat Sayısı: 3\n",
-      "Kullanım Durumu: Boş\n",
-      "Yatırıma Uygunluk: Yatırıma Uygun\n",
-      "Yapı Tipi: Betonarme\n",
-      "İpotek Durumu: Yok\n",
-      "Eşya Durumu: Boş\n",
-      "Takas: Var\n",
-      "Balkon Durumu: Var\n",
-      "WC Sayısı: 3\n",
-      "Görüntülü Gezilebilir mi?: Hayır\n",
+      "Brüt Metrekare: 85 M2\n",
+      "Binanın Yaşı: 4\n",
+      "Binanın Kat Sayısı: 5\n",
+      "Kullanım Durumu: Kiracı Oturuyor\n",
+      "Site İçerisinde: Hayır\n",
+      "Banyo Sayısı: 1\n",
       "İlan Oluşturma Tarihi: 23 Ocak 2023\n",
       "Türü: Konut\n",
-      "Net Metrekare: 500 M2\n",
-      "Oda Sayısı: 6+2\n",
-      "Bulunduğu Kat: Villa Tipi\n",
+      "Net Metrekare: 75 M2\n",
+      "Oda Sayısı: 2+1\n",
+      "Bulunduğu Kat: Yüksek Giriş\n",
       "Isıtma Tipi: Kombi Doğalgaz\n",
       "Krediye Uygunluk: Krediye Uygun\n",
-      "Yapı Durumu: Sıfır\n",
-      "Tapu Durumu: Kat Mülkiyeti\n",
-      "Site İçerisinde: Hayır\n",
-      "Kira Getirisi: 25000 TL\n",
-      "Banyo Sayısı: 5\n",
-      "Balkon Sayısı: 3\n",
+      "Kira Getirisi: 5000 TL\n",
       "Fiyat Durumu: Genel Fiyat\n"
      ]
     }
@@ -175,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -206,78 +195,66 @@
        "      <th>Binanın Yaşı</th>\n",
        "      <th>Binanın Kat Sayısı</th>\n",
        "      <th>Kullanım Durumu</th>\n",
-       "      <th>Yatırıma Uygunluk</th>\n",
-       "      <th>Yapı Tipi</th>\n",
-       "      <th>İpotek Durumu</th>\n",
-       "      <th>...</th>\n",
+       "      <th>Site İçerisinde</th>\n",
+       "      <th>Banyo Sayısı</th>\n",
+       "      <th>İlan Oluşturma Tarihi</th>\n",
+       "      <th>Türü</th>\n",
+       "      <th>Net Metrekare</th>\n",
+       "      <th>Oda Sayısı</th>\n",
        "      <th>Bulunduğu Kat</th>\n",
        "      <th>Isıtma Tipi</th>\n",
        "      <th>Krediye Uygunluk</th>\n",
-       "      <th>Yapı Durumu</th>\n",
-       "      <th>Tapu Durumu</th>\n",
-       "      <th>Site İçerisinde</th>\n",
        "      <th>Kira Getirisi</th>\n",
-       "      <th>Banyo Sayısı</th>\n",
-       "      <th>Balkon Sayısı</th>\n",
        "      <th>Fiyat Durumu</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>12573193</td>\n",
+       "      <td>12574265</td>\n",
        "      <td>23 Ocak 2023</td>\n",
        "      <td>Satılık</td>\n",
-       "      <td>700 M2</td>\n",
-       "      <td>0 (Yeni)</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Boş</td>\n",
-       "      <td>Yatırıma Uygun</td>\n",
-       "      <td>Betonarme</td>\n",
-       "      <td>Yok</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Villa Tipi</td>\n",
+       "      <td>85 M2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Kiracı Oturuyor</td>\n",
+       "      <td>Hayır</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23 Ocak 2023</td>\n",
+       "      <td>Konut</td>\n",
+       "      <td>75 M2</td>\n",
+       "      <td>2+1</td>\n",
+       "      <td>Yüksek Giriş</td>\n",
        "      <td>Kombi Doğalgaz</td>\n",
        "      <td>Krediye Uygun</td>\n",
-       "      <td>Sıfır</td>\n",
-       "      <td>Kat Mülkiyeti</td>\n",
-       "      <td>Hayır</td>\n",
-       "      <td>25000 TL</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
+       "      <td>5000 TL</td>\n",
        "      <td>Genel Fiyat</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 29 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "  İlan Numarası İlan Güncelleme Tarihi Kategorisi Brüt Metrekare Binanın Yaşı  \\\n",
-       "0      12573193           23 Ocak 2023    Satılık         700 M2     0 (Yeni)   \n",
+       "0      12574265           23 Ocak 2023    Satılık          85 M2            4   \n",
        "\n",
-       "  Binanın Kat Sayısı Kullanım Durumu Yatırıma Uygunluk  Yapı Tipi  \\\n",
-       "0                  3             Boş    Yatırıma Uygun  Betonarme   \n",
+       "  Binanın Kat Sayısı  Kullanım Durumu Site İçerisinde Banyo Sayısı  \\\n",
+       "0                  5  Kiracı Oturuyor           Hayır            1   \n",
        "\n",
-       "  İpotek Durumu  ... Bulunduğu Kat     Isıtma Tipi Krediye Uygunluk  \\\n",
-       "0           Yok  ...    Villa Tipi  Kombi Doğalgaz    Krediye Uygun   \n",
+       "  İlan Oluşturma Tarihi   Türü Net Metrekare Oda Sayısı Bulunduğu Kat  \\\n",
+       "0          23 Ocak 2023  Konut         75 M2        2+1  Yüksek Giriş   \n",
        "\n",
-       "  Yapı Durumu    Tapu Durumu Site İçerisinde Kira Getirisi Banyo Sayısı  \\\n",
-       "0       Sıfır  Kat Mülkiyeti           Hayır      25000 TL            5   \n",
-       "\n",
-       "  Balkon Sayısı Fiyat Durumu  \n",
-       "0             3  Genel Fiyat  \n",
-       "\n",
-       "[1 rows x 29 columns]"
+       "      Isıtma Tipi Krediye Uygunluk Kira Getirisi Fiyat Durumu  \n",
+       "0  Kombi Doğalgaz    Krediye Uygun       5000 TL  Genel Fiyat  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(np.reshape(prop_value,(1,29)),columns = prop_name)"
+    "pd.DataFrame(np.reshape(prop_value,(1,18)),columns = prop_name)"
    ]
   },
   {
@@ -290,7 +267,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -304,12 +281,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9d4cf3646afb423126a22615235f27fe08b5580b0419a9fc25c56e523c1abb8a"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
