added some funcs

--- a/Project_02_Regression/Code/Scraping_EmlakJet.ipynb
+++ b/Project_02_Regression/Code/Scraping_EmlakJet.ipynb
@@ -61,7 +61,7 @@
     "        URL to send request\n",
     "\n",
     "    check: boolean\n",
-    "        Use in order to check the connection\n",
+    "        Use to check the connection (default: false)\n",
     "\n",
     "Returns: \n",
     "    r: BeautifulSoap object\n",
